# 2024sp-420-PythonA

./: .coverage  .gitignore  CmdParser.py  Controller.py  CustomExceptions.py  CustomParser.py  Diagram.py  DiagramTest.py  Entity.py  Help.py  Input.py  Output.py  README.md  Relation.py  Serializer.py  Test.py  build.py  help.py  main.py  parserTest.py  parserTests.py  pyvenv.cfg  setup.py  testDiagram.py  testHelp.py  testParseing.py  testParser.py  testTest.py
.github/workflows/: githubactions.yml  pytest.yml
save/: .gitignore  _example.json
src/: __init__.py
src/Controller/: Controller.py  Input.py  __init__.py  pyproject.toml
src/Model/: __init__.py  pyproject.toml
src/View/: pyproject.toml
src/test/: __init__.py  testDiagram.py  test_diagram.py  test_entity.py  test_help.py  test_imports.py  test_lexer.py  test_parseing.py  test_relation.py  test_serializer.py  test_test.py  test_uml_method.py
src/test/generated text files/: attribute_delete_input.txt  auto_test_list.txt  help_output.txt  list_class_output.txt  list_relationships_output.txt  load_input.txt  relationship_add_output.txt
src/umleditor/: __init__.py  custom_exceptions.py
src/umleditor/mvc_model/: test.py  (+6 more)
test/: attribute_add_input.txt  attribute_add_output.txt  attribute_delete_output.txt  attribute_rename_input.txt  attribute_rename_output.txt  auto_test.py  auto_test_list.txt  class_add_input.txt  class_add_output.txt  class_delete_input.txt  class_delete_output.txt  class_rename_output.txt  exit_input.txt  exit_output.txt  list_class_input.txt  list_classes_input.txt  list_classes_output.txt  list_relationships_input.txt  load_output.txt  relationship_add_input.txt  relationship_delete_input.txt  relationship_delete_output.txt  save_input.txt  save_output.txt
test/generated text files/: class_rename_input.txt
(+52 files in other folders)
